# KBC-Program

./: .env  Anchor.toml  keypair.json  package-lock.json  package.json
programs/donor_wall_of_fame/: Cargo.toml
programs/donor_wall_of_fame/src/: lib.rs
programs/donor_wall_of_fame/src/instructions/: add_sol_donor.rs  add_spl_donor.rs  close_base_account.rs  close_state_account.rs  create_base_account.rs  create_donation_list.rs  create_state_account.rs  mod.rs  send_tokens.rs
programs/donor_wall_of_fame/src/state/: base_account.rs  errors.rs  mod.rs  state_account.rs
public/: index.html
rust/DonorWallOfFame/: Anchor.toml  package.json
rust/DonorWallOfFame/OLD/: lib.rs
rust/DonorWallOfFame/programs/DonorWallOfFame/: Cargo.toml
rust/DonorWallOfFame/programs/DonorWallOfFame/src/: lib.rs
rust/DonorWallOfFame/test-ledger/: faucet-keypair.json  genesis.tar.bz2  validator-keypair.json  vote-account-keypair.json
rust/DonorWallOfFame/tests/: DonorWallOfFame.js  keypair.json
src/: App.css  App.tsx  index.tsx
src/components/Countdown/: index.tsx
src/components/CustomTokenIcon/: index.tsx
src/components/DonationPoint/: index.tsx
src/components/FairLaunchContainer/: index.tsx
src/components/MyLoader/: index.tsx
src/context/: DonationPoint.tsx
src/contexts/: TokenList.tsx
src/keyUtils/: idl.json  keypair.json
src/logic/: get-mints.ts  getDonors.tsx  sendDonation.tsx  sendSol.tsx
src/style/: bootstrap.css  custom.css  font-icons.css  fonts.css
tests/: donor_wall_of_fame.js
tests/helper_scripts/: helper.ts  helper_types.ts  parse_donor_info.ts
(+46 files in other folders)
