[package]
name = "donorhalloffame"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "donorhalloffame"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.18.0"
anchor-spl = "0.18.0"
metaplex-token-metadata = "0.0.1"
zerovec = "0.4.1"
serde = "1.0.130"